forEnersys/DavePkg/objects/Sales_Area__c.object
<CustomObject>
    <fields>
        <fullName>Description_Name__c</fullName>
        <formula>IF(  Sales_Organization__c   = &quot;0001&quot;, &quot;Hawker GmbH&quot;,
IF(  Sales_Organization__c   = &quot;0100&quot;, &quot;Enersys&quot;,
IF(  Sales_Organization__c   = &quot;0102&quot;, &quot;Enersys Sp. z o. o.&quot;,
IF(  Sales_Organization__c   = &quot;0201&quot;, &quot;Enersys S.A.R.L.&quot;,
IF(  Sales_Organization__c   = &quot;0301&quot;, &quot;Division RP&quot;,
IF(  Sales_Organization__c   = &quot;0302&quot;, &quot;EH Europe GmbH    PL&quot;,
IF(  Sales_Organization__c   = &quot;0303&quot;, &quot;EH Europe GmbH    UK&quot;,
IF(  Sales_Organization__c   = &quot;0306&quot;, &quot;EH Europe GmbH    DE&quot;,
IF(  Sales_Organization__c   = &quot;0308&quot;, &quot;EH Europe GmbH    FR&quot;,
IF(  Sales_Organization__c   = &quot;0310&quot;, &quot;EH Europe Trading&quot;,
IF(  Sales_Organization__c   = &quot;0320&quot;, &quot;EH Europe GmbH -Oer.&quot;,
IF(  Sales_Organization__c   = &quot;0321&quot;, &quot;EH Europe GmbH -Oer.&quot;,
IF(  Sales_Organization__c   = &quot;0330&quot;, &quot;EH Europe Trading WM&quot;,
IF(  Sales_Organization__c   = &quot;0401&quot;, &quot;EnerSys  AD&quot;,
IF(  Sales_Organization__c   = &quot;0601&quot;, &quot;EnerSys Ltd&quot;,
IF(  Sales_Organization__c   = &quot;0701&quot;, &quot;EnerSys CZ&quot;,
IF(  Sales_Organization__c   = &quot;0702&quot;, &quot;EnerSys SK&quot;,
IF(  Sales_Organization__c   = &quot;9001&quot;, &quot;EnerSys GmbH&quot;,
IF(  Sales_Organization__c   = &quot;9003&quot;, &quot;EnerSys A/S DENMARK&quot;,
IF(  Sales_Organization__c   = &quot;9004&quot;, &quot;Enersys Europe OY&quot;,
IF(  Sales_Organization__c   = &quot;9006&quot;, &quot;EnerSys IT&quot;,
IF(  Sales_Organization__c   = &quot;9007&quot;, &quot;EnerSys BV&quot;,
IF(  Sales_Organization__c   = &quot;9008&quot;, &quot;Enersys AS&quot;,
IF(  Sales_Organization__c   = &quot;9010&quot;, &quot;Enersys JSC - Russia&quot;,
IF(  Sales_Organization__c   = &quot;9012&quot;, &quot;Enersys AB&quot;,
IF(  Sales_Organization__c   = &quot;9013&quot;, &quot;EnerSys B.V.B.A.&quot;,
IF(  Sales_Organization__c   = &quot;9015&quot;, &quot;Enersys Aku Ltd Sti&quot;,
IF(  Sales_Organization__c   = &quot;EH02&quot;, &quot;EH Europe GmbH    PL&quot;,
IF(  Sales_Organization__c   = &quot;EH03&quot;, &quot;EH Europe GmbH    UK&quot;,
IF(  Sales_Organization__c   = &quot;EH06&quot;, &quot;EH Europe GmbH    DE&quot;,
IF(  Sales_Organization__c   = &quot;EH08&quot;, &quot;EH Europe GmbH    FR&quot;,
&quot;&quot;
)))))))))))))))))))))))))))))))
+



IF(  Distribution_Channel_Code__c  = &quot;01&quot;, &quot;, Domestic&quot;, 
IF(  Distribution_Channel_Code__c  = &quot;02&quot;, &quot;, Export&quot;, 
IF(  Distribution_Channel_Code__c  = &quot;03&quot;, &quot;, Inter - Company&quot;, 
IF(  Distribution_Channel_Code__c  = &quot;04&quot;, &quot;, Special business&quot;, 
IF(  Distribution_Channel_Code__c  = &quot;10&quot;, &quot;, Domestic Oldham&quot;, 

&quot;&quot;
))))) +








IF( Division_Code__c = &quot;01&quot;, &quot;, Traction&quot;, 
IF( Division_Code__c = &quot;02&quot;, &quot;, Stationary&quot;, 
IF( Division_Code__c = &quot;03&quot;, &quot;, Aerospace &amp; Defense&quot;, 
&quot;&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <label>Distribution Channel Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Sales Area</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales area Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>